# django_htmx_ui

./: .gitignore  LICENSE  README.md  pyproject.toml
src/django_htmx_ui/: apps.py  defs.py  jinja.py  middleware.py  utils.py
src/django_htmx_ui/jinja2/django_htmx_ui/properties/widgets/helpers/: local_properties.html
src/django_htmx_ui/jinja2/django_htmx_ui/properties/widgets/html/: html_attribute.html  html_element.html
src/django_htmx_ui/views/: base.py  crud.py  generic.py  mixins.py  properties.py
src/django_htmx_ui/views/managers/: context.py
src/django_htmx_ui/views/properties/: __init__.py  ancestors.py  base.py  contexts.py  foreigners.py  urls.py
src/django_htmx_ui/views/properties/managers/: context.py
src/django_htmx_ui/views/properties/widgets/: base.py  helpers.py  html.py  htmx.py  placeholders.py
